--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -16,8 +16,9 @@
             <div class="col s10 m4 l4">
                 <div class="card horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
+                      <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
                       <div class="card-title center"><h5>{{link.title}}</h5></div>
-                      <div class="card-content" id="{{ link.id }}" style="cursor: pointer;">
+                      <div class="card-content" id="{{ link.id }}">
                       <p>{{ link.description }}</p>
                       <p>Tags:
                         {% for tag in link.tags.all %}
@@ -28,6 +29,7 @@
                       </p>
                       <p>{{link.comment_set.count}} comment(s)</p>
                     </div>
+                      </div>
                     <div class="card-action">
                       <a href="{{link.url}}" target="_blank">Visit link</a>
                       {% if request.user == link.user %}
@@ -48,14 +50,12 @@
 
         $(function () {
 
-            var cards = $('.card-content');
+            var cards = $('.card_link');
 
             cards.click(function () {
-
                 var id = this.id;
                 var url = '/link/' + id;
                 window.location.href = url;
-
             });
 
         });
