--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -43,8 +43,24 @@
                                 <div class="row">
                                     <br>
                                     <div class="col s12 m6 l6">
-                                        <span> <button class="btn btn-block left small blue-grey waves-effect waves-light white-text" id="btn_url">URL</button> </span>
+                                        <span> <a class="waves-effect waves-light btn blue-grey white-text" href="#modal1">URL</a>
+                                        <!-- Modal Structure -->
+                                          <div id="modal1" class="modal">
+                                            <div class="modal-content">
+                                                <div class="row">
+                                                    <div class="col s12 m8 l8">
+                                                        <div class="title"><a id="link_url" href="{{ link.url }}" target="_blank"> {{ link.url }}</a>  </div>
+                                                    </div>
+                                                    <div class="col s12 m4 l4">
+                                                       <button title="copy to clipboard" class="btn black white-text" id="copy"> <i class="material-icons black" style="color: white">content_copy</i></button>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                          </div> </span>
+
                                     </div>
+
                                     <div class="col s12 m6 l6">
                                 <span><a class="btn blue-grey small right btn-block  waves-effect waves-light white-text" href="{{ link.url }}" target="_blank">Visit Link</a></span>
                                     </div>
@@ -216,7 +232,14 @@
         });
 
 
+        $('.modal').modal();
 
+        var copy = $('#copy');
+        copy.click(function () {
+            var linkUrl = $('#link_url');
+            copyToClipboard(linkUrl);
+            Materialize.toast('copied to clipboard', 2000);
+        });
     });
 
     $('img').on('error', function () {
@@ -224,6 +247,14 @@
         console.log("Hello");
         $('#card_image_div').css({'display' : 'none'});
     });
+
+    function copyToClipboard(element) {
+    var $temp = $("<input>");
+    $("body").append($temp);
+    $temp.val($(element).text()).select();
+    document.execCommand("copy");
+    $temp.remove();
+}
 
     </script>
 
