--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -106,11 +106,11 @@
                     <div class="row">
                         <div class="col s4 m4 l4">
                             <span> <sup id="upvotes_count">{{ upvotes }}</sup><sup> upvote(s)</sup></span>
-                            <button class="btn green waves-light waves-effect upvote {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> &nbsp;&nbsp; Upvote &nbsp;&nbsp;</button>
+                            <button class="btn green waves-light waves-effect upvote upvote_upper_button {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> <i class="material-icons green white-text upvote {{ upvote_button }}">thumb_up</i> </button>
                         </div>
                         <div class="col s4 m4 l4">
                             <span> <sup id="downvotes_count">{{ downvotes }} </sup><sup> downvote(s)</sup></span>
-                            <button class="btn red waves-light center  waves-effect downvote {{downvote_button}}" id="downvote_button" link_id = "{{ link.id }}">Downvote</button>
+                                    <button title="downvote" class="btn red btn-block white-text downvote downvote_upper_button {{ downvote_button }}" id="downvote_button" link_id = "{{ link.id }}" > <i class="material-icons red downvote {{ downvote_button }}" style="color: white" >thumb_down</i></button>
                         </div>
                         <div class="col s4 m4 l4">
                             <span>
@@ -170,14 +170,14 @@
             }
             disp = 1 - disp;
         });
-    $('.upvote').click(function(){
+    $('.upvote_upper_button').click(function(){
     var link_id;
     link_id = $(this).attr("link_id");
     $.get('/link/{{link.id}}/vote/', {type: 'U'}, function(data){
                $('#upvotes_count').html(data['upvotes']);
                $('#downvotes_count').html(data['downvotes']);
-               $('.upvote').removeClass('btn-flat lighten-5');
-               $('.downvote').removeClass('btn-flat lighten-5');
+               $('.upvote').removeClass('lighten-5');
+               $('.downvote').removeClass('lighten-5');
                //$(".downvote").toggleClass(data['downvote_button']);
                 console.log(data.upvote_button);
                 console.log(data.downvote_button);
@@ -187,19 +187,19 @@
                 }
                 else
                 {
-                    $('.upvote').addClass('btn-flat lighten-5');
+                    $('.upvote').addClass('lighten-5');
                 }
         });
     });
-    $('.downvote').click(function(){
+    $('.downvote_upper_button').click(function(){
     var link_id;
     link_id = $(this).attr("link_id");
     $.get('/link/{{link.id}}/vote/', {type: 'D'}, function(data){
 
                $('#downvotes_count').html(data['downvotes']);
                $('#upvotes_count').html(data['upvotes']);
-               $('.upvote').removeClass('btn-flat lighten-5');
-               $('.downvote').removeClass('btn-flat lighten-5');
+               $('.upvote').removeClass('lighten-5');
+               $('.downvote').removeClass('lighten-5');
               // $(".downvote").addClass(data['downvote_button']);
 
                 if(data['downvote_button'] == '')
@@ -208,7 +208,7 @@
                 }
                 else
                 {
-                    $('.downvote').addClass('btn-flat lighten-5');
+                    $('.downvote').addClass('lighten-5');
                 }
         });
 
