--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -106,11 +106,11 @@
                     <div class="row">
                         <div class="col s4 m4 l4">
                             <span> <sup id="upvotes_count">{{ upvotes }}</sup><sup> upvote(s)</sup></span>
-                            <button class="btn green waves-light waves-effect upvote upvote_upper_button {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> <i class="material-icons green white-text upvote {{ upvote_button }}">thumb_up</i> </button>
+                            <button class="btn green upvote upvote_upper_button waves-effect waves-light {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
                         </div>
                         <div class="col s4 m4 l4">
                             <span> <sup id="downvotes_count">{{ downvotes }} </sup><sup> downvote(s)</sup></span>
-                                    <button title="downvote" class="btn red btn-block white-text downvote downvote_upper_button {{ downvote_button }}" id="downvote_button" link_id = "{{ link.id }}" > <i class="material-icons red downvote {{ downvote_button }}" style="color: white" >thumb_down</i></button>
+                                    <button title="downvote" class="btn waves-effect waves-light  red btn-block white-text downvote downvote_upper_button {{ downvote_button }}" id="downvote_button" link_id = "{{ link.id }}" > <i class="material-icons" style="color: white; background-color: transparent" >thumb_down</i></button>
                         </div>
                         <div class="col s4 m4 l4">
                             <span>
