--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -94,8 +94,8 @@
                         <p>
                         {% for tag in link.tags.all %}
                             <div class="chip">
-                                <a href = "../tags/{{tag.name}}/">{{tag.name}}</a>
-                            </div>
+                                <a href = "/../tags/{{tag.name}}/">{{tag.name}}</a>
+                            </div></a>
                          {% endfor %}
                         </p>
                     </li>
