--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -10,6 +10,9 @@
     <br><a href = "/link/new"> Create new link </a><br/>
 <a href = "/book/new"> Create new book </a><br/>
 {% else %}
+<a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br/>
+<a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br/>
+<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a><br/>
 <a href = "/login"> Login</a><br/>
 <a href = "/signup"> Signup</a><br/>
 {% endif %}
