--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -13,6 +13,7 @@
 <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br/>
 <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br/>
 <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a><br/>
+<a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br/>
 <a href = "/login"> Login</a><br/>
 <a href = "/signup"> Signup</a><br/>
 {% endif %}
