--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -14,7 +14,7 @@
 	</title>
     <script src = "/static/materialize/js/jquery.js"></script>
     <script src = '/static/materialize/js/materialize.js'> </script>
-	<!---<link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> --->
+	<!-- <link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> -->
     {% block head %}
 	{% endblock %}
 </head>
@@ -41,11 +41,36 @@
                 <li><a class="left" href="#">Project</a></li>
             </ul>
             <ul class="hide-on-med-and-down right">
-                {% if not request.user.is_authenticated %}
-                <li ><a href="/login" class="right"> Login</a></li>
-                    <li ><a href="/signup" class="right">Sign Up</a></li>
+                {% if request.user.social_auth.get.provider == "facebook" %}
+                    <li>
+                    <img height=40px width=40px src="https://graph.facebook.com/{{request.user.social_auth.get.uid}}/picture?type=square" /></li>
+                
+                {% elif request.user.social_auth.get.provider == "google-oauth2" %}
+                    <li>
+                    <script src="https://www.avatarapi.com/js.aspx?email={{request.user.social_auth.get.uid}}&size=40"></script>
+                    </li>
+
+                {% elif request.user.social_auth.get.provider == "github" %}
+                    <li>
+                     <img height=40px width=40px src="https://avatars.githubusercontent.com/u/{{request.user.social_auth.get.uid}}" />
+                    </li>
+
+                {% elif request.user.social_auth.get.provider == "twitter" %}
+                    <li>
+                     <img height=40px width=40px src="https://twitter.com/{{request.user.social_auth.get.access_token.screen_name}}/profile_image?size=normal" />
+                    </li>
 
                 {% else %}
+                    <li>
+                     <img height=40px width=40px src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
+                    </li>
+                {% endif %}
+
+                {% if not request.user.is_authenticated %}
+                    <li ><a href="/login" class="right"> Login</a></li>
+                    <li ><a href="/signup" class="right">Sign Up</a></li>
+                {% else %}
+                    <li>Hi {{request.user.first_name}}!</li>
                     <li><a href="/profile" class="right">Profile</a></li>
                     <li><a href="/logout" class="right">Logout</a></li>
                 {% endif %}
