--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -43,7 +43,8 @@
             <ul class="hide-on-med-and-down right">
                 {% if request.user.social_auth.get.provider == "facebook" %}
                     <li>
-                    <img height=40px width=40px src="https://graph.facebook.com/{{request.user.social_auth.get.uid}}/picture?type=square" /></li>
+
+                    <img class="responsive-img circle" height = "40px" width="40px" style="margin: 12px"  src="https://graph.facebook.com/{{request.user.social_auth.get.uid}}/picture?type=square" /></li>
                 
                 {% elif request.user.social_auth.get.provider == "google-oauth2" %}
                     <li>
@@ -52,17 +53,16 @@
 
                 {% elif request.user.social_auth.get.provider == "github" %}
                     <li>
-                     <img height=40px width=40px src="https://avatars.githubusercontent.com/u/{{request.user.social_auth.get.uid}}" />
+                     <img class="responsive-img circle" style="margin: 12px" height = "40px" width="40px"  src="https://avatars.githubusercontent.com/u/{{request.user.social_auth.get.uid}}" />
                     </li>
 
                 {% elif request.user.social_auth.get.provider == "twitter" %}
                     <li>
-                     <img height=40px width=40px src="https://twitter.com/{{request.user.social_auth.get.access_token.screen_name}}/profile_image?size=normal" />
+                     <img class="responsive-img circle" style="margin: 12px" height = "40px" width="40px" src="https://twitter.com/{{request.user.social_auth.get.access_token.screen_name}}/profile_image?size=normal" />
                     </li>
-
                 {% else %}
                     <li>
-                     <img height=40px width=40px src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
+                     <img class="responsive-img circle" style="margin: 12px" height = "40px"  width="40px" src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
                     </li>
                 {% endif %}
 
