--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -41,11 +41,16 @@
                 <li><a class="left" href="#">Project</a></li>
             </ul>
             <ul class="hide-on-med-and-down right">
-                {% if request.user.social_auth.get.provider == "facebook" %}
+
+
+                {% if not request.user.is_authenticated %}
+                    <li ><a href="/signup" class="right">Sign Up</a></li>
+                {% else %}
+                    {% if request.user.social_auth.get.provider == "facebook" %}
                     <li>
 
                     <img class="responsive-img circle" height = "40px" width="40px" style="margin: 12px"  src="https://graph.facebook.com/{{request.user.social_auth.get.uid}}/picture?type=square" /></li>
-                
+
                 {% elif request.user.social_auth.get.provider == "google-oauth2" %}
                     <li>
                     <script src="https://www.avatarapi.com/js.aspx?email={{request.user.social_auth.get.uid}}&size=40"></script>
@@ -62,14 +67,9 @@
                     </li>
                 {% else %}
                     <li>
-                     <img class="responsive-img circle" style="margin: 12px" height = "40px"  width="40px" src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
+                     <img class="responsive-img circle" height="40px" width="40px" style="margin: 25%; margin-left: -10%" src="https://thebenclark.files.wordpress.com/2014/03/facebook-default-no-profile-pic.jpg" />
                     </li>
                 {% endif %}
-
-                {% if not request.user.is_authenticated %}
-                    <li ><a href="/login" class="right"> Login</a></li>
-                    <li ><a href="/signup" class="right">Sign Up</a></li>
-                {% else %}
                     <li>Hi {{request.user.first_name}}!</li>
                     <li><a href="/profile" class="right">Profile</a></li>
                     <li><a href="/logout" class="right">Logout</a></li>
@@ -82,7 +82,6 @@
                 <li><a  href="#">Project</a></li>
                 {%  if not request.user.is_authenticated %}
                 <li><a href="signup" > Sign Up</a></li>
-                <li><a href="login">Login</a></li>
                 {% else %}
                     <li><a href="/profile" >Profile</a></li>
                 <li><a href="/logout">Logout</a></li>
