Improvements and bug fixes

--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -107,7 +107,7 @@
                         <p>
                         {% for tag in link.tags.all %}
                             <div class="chip">
-                                <a href = "/../tags/{{tag.name}}/">{{tag.name}}</a>
+                                <a href = "/../tags/{{tag.name}}/" style="text-decoration: underline">{{tag.name}}</a>
                             </div></a>
                          {% endfor %}
                         </p>
