--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -6,9 +6,8 @@
 
 {% block body %}
     <div class = "container">
-
     <div class="row">
-        <h3 class="center blue-grey-text">Book</h3>
+        <h3 class="blue-grey-text center">Book</h3>
     </div>
     {% for link in book %}
         <div class="row">
@@ -23,7 +22,7 @@
                       <p>Tags:
                         {% for tag in link.tags.all %}
                             <span class="chip">
-                          <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
+                          <strong><a href = "/../tags/{{tag.name}}/" style="text-decoration: underline">{{tag.name}}</a></strong>
                             </span>
                         {% endfor %}
                       </p>
