--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -47,7 +47,7 @@
                 </div>
                     <br>
                     <div>
-                        <a href = "/login" class="center center-align"><button class="btn btn-default btn-block"><span class="fa fa-user" style="text-transform: lowercase"> | Sign Up locally</span></button></a>
+                        <a href = "/signup" class="center center-align"><button class="btn btn-default btn-block"><span class="fa fa-user" style="text-transform: lowercase"> | Sign Up locally</span></button></a>
                     </div>
                 </div>
                 <div class="col s12 m1 l1 hide-on-small-and-down" style="border-left: 1px solid black">
