--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -5,9 +5,7 @@
 {% block title %}New Link{% endblock %}
 
 {% block body %}
-    <style>
 
-    </style>
     <div class="container">
         <div class="row">
             <div class="col s1 m3 l3"></div>
@@ -15,18 +13,53 @@
             <h4 class="center">Create your link</h4>
                 <form method="post" action="{% url 'create_link' %}" role="form">
                 {% csrf_token %}
-                    {% for field in form.visible_fields %}
-                    <div class="input-field">
-                        {{ field }}
-                        <label  >{{ field.label }} </label>
-                        {% if field.help_text %}
-                            <span>{{ field.help_text|safe }}</span>
-                        {% endif %}
-                        {% for error in field.errors %}
-                            <label id = "control-label">{{ error }}</label>
-                        {% endfor %}
+                <div class="row">
+                    <div class="col s12 m6 l6">
+                        <div class="input-field">
+                            <i class="material-icons prefix">open_in_browser</i>
+                            <input type="text" class="input" name="URL" id="URL">
+                            <label for="URL" class="active">URL</label>
+                        </div>
                     </div>
-                    {% endfor %}
+                    <div class="col s12 m6 l6">
+                        <div class="input-field">
+                            <i class="material-icons prefix">title</i>
+                            <input type="text" class="input" name="TITLE" id="TITLE">
+                            <label for="TITLE" class="active">Title</label>
+                        </div>
+                    </div>
+                </div>
+                    <div class="row">
+                    <div class="col s12 m6 l6">
+                        <div class="input-field">
+                        <i class="material-icons prefix">assignment</i>
+                        <input type="text" class="input" name="TAGS" id="TAGS">
+                        <label for="TAGS" class="active">Tags</label>
+                    </div>
+                    </div>
+                    <div class="col s12 m6 l6">
+                         <div class="input-field">
+                        <i class="material-icons prefix">book</i>
+                        <select multiple title="Choose the books in which the current link has to be saved" id="BOOKS">
+                        <label class="active" for="BOOKS">BOOKS</label>
+                            <option selected disabled>Choose Books here</option>
+                            {% for x in books %}
+                                <option> {{ x }} </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    </div>
+                </div>
+                    <div class="row">
+
+                    <div class=" col s12 m12 l12">
+                        <div class="input-field">
+                        <i class="material-icons prefix">description</i>
+                        <textarea class="input materialize-textarea" name="DESCRIPTION" id="DESCRIPTION"></textarea>
+                        <label for="DESCRIPTION" class="active">Description</label>
+                    </div>
+                    </div>
+                </div>
                     <button type="submit" class="btn">{% trans 'Save' %}</button>
                     <br><br>
                 </form>
