--- a/linkbook/links/templates/links/edit_link.html
+++ b/linkbook/links/templates/links/edit_link.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}{% endblock %}
+{% block title %}Edit {{link.title}}{% endblock %}
 
 {% block body %}
 
