--- a/linkbook/links/templates/links/view_books.html
+++ b/linkbook/links/templates/links/view_books.html
@@ -8,7 +8,7 @@
 <div class = "container">
 
     <div class="row">
-        <h3 class="center blue-grey-text">Your Books</h3>
+        <h3 class="center blue-grey-text">{{user.username}}'s Books</h3>
     </div>
     {% for book in view_books %}
         <div class="row">
