--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -8,7 +8,7 @@
     <div class = "container">
 
     <div class="row">
-        <h3 class="center blue-grey-text">Book</h3>
+        <h3 class="center blue-grey-text">{{user.username}}'s links</h3>
     </div>
     {% for link in view_links %}
         <div class="row">
