--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -7,24 +7,27 @@
 {% block body %}
     <div class="container">
         <div class="row">
-
             <div class="col s1 l3 m3"></div>
             <div class="col s10 l6 m6 card hoverable">
             <h4 class="center">Create your own book</h4>
                 <form method="post" action="{% url 'create_book' %}" role="form">
                 {% csrf_token %}
-                    {% for field in form.visible_fields %}
-                    <div class=" input-field">
-                        {{ field }}
-                        <label for="{{ field.label }}" class="active" >{{ field.label }} </label>
-                        {% if field.help_text %}
-                            <span>{{ field.help_text|safe }}</span>
-                        {% endif %}
-                        {% for error in field.errors %}
-                            <label id = "control-label">{{ error }}</label>
-                        {% endfor %}
+                    <div class="row">
+                        <div class="col s12 m1 l1"></div>
+                        <div class="col s12 m10 l10">
+                            <div class="row">
+                                <div class="col s12 m6 l6">
+                                    <div class="input-field">
+                                        
+                                    </div>
+                                </div>
+                                <div class="col s12 m6 l6">
+                                    <div class="input-field"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s12 m1 l1"></div>
                     </div>
-                    {% endfor %}
                     <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
                     <br><br>
                 </form>
