--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -71,7 +71,7 @@
 
     <script>
     $(function () {
-         $('#description').trigger('autoresize');
+         $('#DESCRIPTION').trigger('autoresize');
          $('.chips').material_chip();
 
          $('#TITLE, #DESCRIPTION').characterCounter();
