--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -5,15 +5,45 @@
 {% block title %}LinkBook{% endblock %}
 
 {% block body %}
-    <link rel="stylesheet" type="text/css" href="/static/materialize/css/override_buttons.css">
     <br><br><br>
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
 {% if request.user.is_authenticated %}
 <a href = "/logout"> Logout</a>
     <br><a href = "/link/new"> Create new link </a><br/>
 
-<a href = "/book/new"> Create new book </a><br/>
+    <a href = "#modal2" class="waves-effect waves-light btn"> Create new book </a><br/>
+
+    <div id="modal2" class="modal">
+
+        <div class="modal-content">
+            <h4 class="center">Create your own book</h4>
+                <form method="post" action="{% url 'create_book' %}" role="form">
+                {% csrf_token %}
+                    <div class="input-field">
+                        <i class="material-icons prefix">title</i>
+                        <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30">
+                        <label for="TITLE">Title</label>
+                    </div>
+                    <div class="input-field">
+                        <div class="input-field">
+                            <i class="material-icons prefix">description</i>
+                            <textarea class="materialize-textarea" type="text" id="DESCRIPTION" name="DESCRIPTION" maxlength="255" data-length="255"></textarea>
+                                        <label for="DESCRIPTION">Description</label>
+                        </div>
+                        </div>
+
+                    <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
+                    <br><br>
+                </form>
+
+        </div>
+    </div>
+
+
+
 {% else %}
+        <link rel="stylesheet" type="text/css" href="/static/materialize/css/override_buttons.css">
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <a class="waves-effect waves-light btn" href="#modal1">Login</a>
     <br>
   <!-- Modal Structure -->
@@ -97,6 +127,11 @@
      <script>
 
         $(function () {
+                     $('#DESCRIPTION').trigger('autoresize');
+         $('.chips').material_chip();
+
+         $('#TITLE, #DESCRIPTION').characterCounter();
+
             $('.modal').modal();
         });
 
