--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -12,22 +12,19 @@
             <h4 class="center">Create your own book</h4>
                 <form method="post" action="{% url 'create_book' %}" role="form">
                 {% csrf_token %}
-                    <div class="row">
-                        <div class="col s12 m1 l1"></div>
-                        <div class="col s12 m10 l10">
-                            <div class="row">
-                                <div class="col s12 m6 l6">
-                                    <div class="input-field">
-                                        
-                                    </div>
-                                </div>
-                                <div class="col s12 m6 l6">
-                                    <div class="input-field"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s12 m1 l1"></div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">title</i>
+                        <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30">
+                        <label for="TITLE">Title</label>
                     </div>
+                    <div class="input-field">
+                        <div class="input-field">
+                            <i class="material-icons prefix">description</i>
+                            <textarea class="materialize-textarea" type="text" id="DESCRIPTION" name="DESCRIPTION" maxlength="30" data-length="255"></textarea>
+                                        <label for="DESCRIPTION">Description</label>
+                        </div>
+                        </div>
+
                     <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
                     <br><br>
                 </form>
@@ -43,8 +40,11 @@
 
     $(function () {
 
-    //      $('#description').val('');
-         $('#description').trigger('autoresize');
+         $('#DESCRIPTION').trigger('autoresize');
+         $('.chips').material_chip();
+
+         $('#TITLE, #DESCRIPTION').characterCounter();
+
     })
     </script>
 
