--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -5,7 +5,6 @@
 {% block title %}New Link{% endblock %}
 
 {% block body %}
-
     <div class="container">
         <div class="row">
             <div class="col s1 m3 l3"></div>
@@ -18,13 +17,13 @@
                         <div class="input-field">
                             <i class="material-icons prefix">open_in_browser</i>
                             <input type="url" class="input validate" name="URL" id="URL" autocomplete="autocomplete" required>
-                            <label for="URL" class="active" data-error="Wrong! Example : https://www.google.co.in." data-success="Correct">URL</label>
+                            <label for="URL" class="active" data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="Correct">URL</label>
                         </div>
                     </div>
                     <div class="col s12 m6 l6">
                         <div class="input-field">
                             <i class="material-icons prefix">title</i>
-                            <input type="text" class="input" name="TITLE" id="TITLE" autocomplete="autocomplete" required maxlength="25" data-length="25">
+                            <input type="text" class="input" name="TITLE" id="TITLE" autocomplete="autocomplete" required maxlength="30" data-length="30">
                             <label for="TITLE" class="active">Title</label>
                         </div>
                     </div>
