recreated views for books

--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}{{ link.id }}{% endblock %}
+{% block title %}New Book{% endblock %}
 
 {% block body %}
     <div class="container">
