--- a/linkbook/links/templates/links/edit_book.html
+++ b/linkbook/links/templates/links/edit_book.html
@@ -5,45 +5,47 @@
 {% block title %}Edit {{book.title}}{% endblock %}
 
 {% block body %}
-
     <div class="container">
-
         <div class="row">
-
-            <div class="col s1 m3 l3"></div>
-            <div class="col s10 m6 l6 card hoverable">
-            <h4 class="center">Edit your book<h4>
+            <div class="col s1 l3 m3"></div>
+            <div class="col s10 l6 m6 card hoverable">
+            <h4 class="center">Edit {{book.title}}</h4>
                 <form method="post" action="/book/{{book.id}}/edit/" role="form">
                 {% csrf_token %}
-                    {% for field in form.visible_fields %}
-                    <div class=" input-field">
-                        {{ field }}
-                        <label  >{{ field.label }} </label>
-                        {% if field.help_text %}
-                            <span>{{ field.help_text|safe }}</span>
-                        {% endif %}
-                        {% for error in field.errors %}
-                            <label id = "control-label">{{ error }}</label>
-                        {% endfor %}
+                    <div class="input-field">
+                        <i class="material-icons prefix">title</i>
+                        <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30" value = "{{book.title}}">
+                        <label for="TITLE">Title</label>
                     </div>
-                    {% endfor %}
-                    <button type="submit" class="btn">{% trans 'Save' %}</button>
+                    <div class="input-field">
+                        <div class="input-field">
+                            <i class="material-icons prefix">description</i>
+                            <textarea class="materialize-textarea" type="text" id="DESCRIPTION" name="DESCRIPTION" maxlength="30" data-length="255">{{book.description}}</textarea>
+                                        <label for="DESCRIPTION">Description</label>
+                        </div>
+                        </div>
+
+                    <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
                     <br><br>
                 </form>
+
             </div>
-            <div class="s1 m3 l3"></div>
+            <div class="col s1 l3 m3"></div>
 
         </div>
+
     </div>
 
     <script>
 
     $(function () {
 
-         $('#description').trigger('autoresize');
+         $('#DESCRIPTION').trigger('autoresize');
+         $('.chips').material_chip();
 
+         $('#TITLE, #DESCRIPTION').characterCounter();
 
     })
-
     </script>
+
 {% endblock body %}
